argocd/applications/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Replace=true
  name: registry
  namespace: registry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: registry
          image: registry:3@sha256:1be55279f18a2fe1a74edf2664cac61c1bea305b7b4642dab412e7affdcb3e33
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "200m"
              memory: "64Mi"
          ports:
            - name: registry-api
              containerPort: 5000
          volumeMounts:
            - name: registry-config
              mountPath: /etc/docker/registry
            - name: registry-data
              mountPath: /var/lib/registry
        - name: registry-proxy
          image: haproxy:3.4.4-alpine@sha256:c0afc4864dca9c68694cd1290433f0ee79b5c55be80f6745a165ffe373b9a564
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 99
            runAsNonRoot: true
            runAsUser: 99
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
          ports:
            - name: registry-http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /v2/
              port: registry-http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /v2/
              port: registry-http
            failureThreshold: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: registry-http
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - name: registry-proxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
              readOnly: true
      volumes:
        - name: registry-config
          configMap:
            name: registry-config
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-data
        - name: registry-proxy-config
          configMap:
            name: registry-proxy
