argocd/applications/registry/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-tailscale
  namespace: registry
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - registry.ide-newton.ts.net
  rules:
    - host: registry.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
